--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,3 +9,6 @@ $font-size: 1rem;
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 $ff-main: 'Red Hat Display',
 sans-serif;
+// sizes
+$card-width: 450px;
+$card-height: 700px;
