--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,24 +1,17 @@
 // primary colors
-$intro-blue: hsl(217, 28%, 15%);
-$bgc-main: hsl(218, 28%, 13%);
-$bgc-footer: hsl(216, 53%, 9%);
-$bgc-testimonials: hsl(219, 30%, 18%);
-// accent colors
-$cyan: hsl(176, 68%, 64%);
-$blue: hsl(198, 60%, 50%);
-$light-red: hsl(0, 100%, 63%);
+$soft-cyan: (174, 77%, 80%); //full slider bar
+$strong-cyan: hsl(174, 86%, 45%); //slider background
+$light-grayish-red: hsl(14, 92%, 95%); //discount background
+$light-red: hsl(15, 100%, 70%); //discount text
+$pale-blue: hsl(226, 100%, 87%); //cta text
 // neutral colors
-$white: #fff;
-$gray-d: #ddd;
-$gray-a: #aaa;
-$black: #000;
+$wwhite: hsl (0, 0%, 100%); //Pricing Component Background
+$very-pale-blue: hsl(230, 100%, 99%); //Main Background
+$light-grayish-blue: hsl(224, 65%, 95%); // Empty Slider Bar
+$light-grayish-blue: hsl(223, 50%, 87%); //Toggle Background
+$grayish-blue: hsl(225, 20%, 60%); //Text
+$dark-desaturated-blue: hsl(227, 35%, 25%); //Text & CTA Background
 // typography
-$font-size: 14px;
-// Headings, Call-to-actions, Header Navigation
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-$ff-secondary: 'Raleway',
-sans-serif;
-// Body
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-$ff-primary: 'Open Sans',
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap');
+$ff-primary: 'Manrope',
 sans-serif;
