--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,3 +1,4 @@
-@forward './card';
-@forward './logo';
-@forward './button';
+@forward './price-range-input/price-range-input';
+@forward './btn-toggle/btn-toggle';
+@forward './pricing-component';
+@forward './cta-button';
