--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,7 +1,1 @@
-@forward './nav';
-@forward './header';
-@forward './services';
-@forward './location';
-@forward './opinions';
-@forward './early-access';
-@forward './footer';
+@forward './frame';
