--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $pale-blue: hsl(226, 100%, 87%); //cta text
 $white: hsl(0, 0%, 100%); //Pricing Component Background
 $black: hsl(0, 0%, 0%); //Body Background
 $very-pale-blue: hsl(230, 100%, 99%); //Main Background
+$toggle-background-color: rgb(208, 216, 237);
 $light-grayish-blue: hsl(224, 65%, 95%); // Empty Slider Bar / Toggle Background
 $grayish-blue: hsl(225, 20%, 60%); //Text
 $dark-desaturated-blue: hsl(227, 35%, 25%); //Text & CTA Background
