--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,5 +1,5 @@
 @use 'variables' as v;
-@mixin flex($direction: row, $justify: center, $align: center, $gap: 1rem) {
+@mixin flex($direction: row, $justify: center, $align: center, $gap: 0) {
     display: flex;
     flex-direction: $direction;
     justify-content: $justify;
@@ -24,34 +24,4 @@
     @media only screen and (max-width: 40rem) {
         @content;
     }
-}
-
-// range input
-@mixin thumb {
-    -webkit-appearance: none;
-    border-radius: 50%;
-    width: 2.5rem;
-    aspect-ratio: 1;
-    background: v.$strong-cyan url('../img/icon-slider.svg') no-repeat center;
-    // transform: translateY(-40%);
-    cursor: pointer;
-    box-shadow: 0 0 1rem 0 v.$strong-cyan;
-    &:hover {
-        background-color: lighten(v.$strong-cyan, 5%);
-    }
-    &:active {
-        background-color: darken(v.$strong-cyan, 10%);
-    }
-}
-
-@mixin slider-bar {
-    -webkit-appearance: none;
-    width: 100%;
-    height: .5rem;
-    border: none;
-    border-radius: 100px;
-}
-
-@mixin horizontal-padding {
-    padding: 0 clamp(1.5rem, 7vw, 3rem);
 }
