--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,19 +1,27 @@
 // primary colors
-$soft-cyan: hsl(174, 77%, 80%); //full slider bar
-$strong-cyan: hsl(174, 86%, 45%); //slider background
-$light-grayish-red: hsl(14, 92%, 95%); //discount background
-$light-red: hsl(15, 100%, 70%); //discount text
-$pale-blue: hsl(226, 100%, 87%); //cta text
-// neutral colors
-$white: hsl(0, 0%, 100%); //Pricing Component Background
-$black: hsl(0, 0%, 0%); //Body Background
-$very-pale-blue: hsl(230, 100%, 99%); //Main Background
-$toggle-background-color: rgb(208, 216, 237);
-$light-grayish-blue: hsl(224, 65%, 95%); // Empty Slider Bar / Toggle Background
-$grayish-blue: hsl(225, 20%, 60%); //Text
-$dark-desaturated-blue: hsl(227, 35%, 25%); //Text & CTA Background
+$lime-green: hsl(163, 72%, 41%);
+$bright-red: hsl(356, 69%, 56%);
+$facebook: hsl(208, 92%, 53%);
+$twitter: hsl(203, 89%, 53%);
+$instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
+$youTube: hsl(348, 97%, 39%);
+// themes
+// dark
+$theme-dark: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
+$Very-dark-blue: hsl(230, 17%, 14%); // background
+$Very-dark-blue: hsl(232, 19%, 15%); // top bg pattern
+$Dark-desaturated-blue: hsl(228, 28%, 20%); //card bg
+$Desaturated-blue: hsl(228, 34%, 66%); //text
+$White-text: hsl(0, 0%, 100%); //text
+// white
+$theme-light: hsl(230, 22%, 74%);
+$white-bg: hsl(0, 0%, 100%); // bg
+$Very-pale-blue: hsl(225, 100%, 98%); // top bg pattern
+$Light-grayish-blue: hsl(227, 47%, 96%); // card bg
+$Dark-grayish-blue: hsl(228, 12%, 44%); // text
+$Very-dark-blue: hsl(230, 17%, 14%); // text
 // typography
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap');
-$ff-primary: 'Manrope',
+$fs-primary: 14px;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+$ff-primary: 'Inter',
 sans-serif;
-$fs-main: 15px;
