--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -3,49 +3,58 @@ body {
     min-height: 100vh;
     display: grid;
     place-items: center;
-    background-color: #fff;
-    &.dark-theme {
-        --background: hsl(230, 17%, 14%); // background
-        --background-top: hsl(232, 19%, 15%); // top bg pattern
-        --card-background: hsl(228, 28%, 20%); //card bg
-        --card-hover-background: hsl(228, 28%, 30%);
-        --color-primary: hsl(0, 0%, 100%); //text
-        --color-secondary: hsl(228, 34%, 66%); //text
-        --toggle-color: linear-gradient(90deg, hsl(210, 78%, 56%) 0%, hsl(146, 68%, 55%) 100%);
-        --toggle-hover-color: linear-gradient(90deg, hsl(210, 78%, 56%) 0%, hsl(146, 68%, 55%) 100%);
-        --toggle-slider-position: -110;
-        --toggle-slider-hover-color: hsl(232, 19%, 25%);
-        --theme-name-color-hover: var(--color-primary);
+    background-color: fff;
+    &.blue-theme {
+        // backgrounds
+        --main-background: hsl(222, 26%, 31%);
+        --keypad-background: hsl(223, 31%, 20%);
+        --toggle-background: hsl(223, 31%, 20%);
+        --screen-background: hsl(224, 36%, 15%);
+        // keys
+        --key-backgound-1: hsl(225, 21%, 49%);
+        --key-shadow-1: hsl(224, 28%, 35%);
+        --key-backgound-2: hsl(6, 63%, 50%);
+        --key-shadow-2: hsl(6, 70%, 34%);
+        --key-backgound-3: hsl(30, 25%, 89%);
+        --key-shadow-3: hsl(28, 16%, 65%);
+        // text color
+        --color-1: hsl(221, 14%, 31%) --color-2: hsl(221, 14%, 31%);
+        --color-3: hsl(221, 14%, 31%);
     }
     &.light-theme {
-        --background: hsl(0, 0%, 100%); // background
-        --background-top: hsl(225, 100%, 98%); // top bg pattern
-        --card-background: hsl(227, 47%, 96%); //card bg
-        --card-hover-background: hsl(227, 47%, 86%);
-        --color-primary: hsl(230, 17%, 14%); //text
-        --color-secondary: hsl(228, 12%, 44%); //text
-        --toggle-color: hsl(230, 22%, 74%);
-        --toggle-hover-color: linear-gradient(90deg, hsl(210, 78%, 56%) 0%, hsl(146, 68%, 55%) 100%);
-        --toggle-slider-position: 10;
-        --toggle-slider-hover-color: hsl(0, 0%, 100%);
-        --theme-name-color-hover: var(--color-secondary);
+        // backgrounds
+        --main-background: hsl(0, 0%, 90%);
+        --keypad-background: hsl(0, 0%, 90%);
+        --toggle-background: hsl(0, 0%, 90%);
+        --screen-background: hsl(185, 42%, 37%);
+        // keys
+        --key-backgound-1: hsl(185, 42%, 37%);
+        --key-shadow-1: hsl(185, 58%, 25%);
+        --key-backgound-2: hsl(25, 98%, 40%);
+        --key-shadow-2: hsl(25, 99%, 27%);
+        --key-backgound-3: hsl(45, 7%, 89%);
+        --key-shadow-3: hsl(35, 11%, 61%);
+        // text color
+        --color-1: hsl(60, 10%, 19%);
+        --color-2: hsl(0, 0, 100%);
+        --color-3: hsl(0, 0, 100%);
     }
-}
-
-header,
-main {
-    position: relative;
-    z-index: 100;
-    width: min(90vw, 70rem);
-    margin: 0 auto;
-}
-
-main {
-    &>* {
-        margin-top: 3rem;
+    &.purple-theme {
+        // backgrounds
+        --main-background: hsl(268, 75%, 9%);
+        --keypad-background: hsl(268, 71%, 12%);
+        --toggle-background: hsl(268, 71%, 12%);
+        --screen-background: hsl(268, 71%, 12%);
+        // keys
+        --key-backgound-1: hsl(281, 89%, 26%);
+        --key-shadow-1: hsl(285, 91%, 52%);
+        --key-backgound-2: hsl(176, 100%, 44%);
+        --key-shadow-2: hsl(177, 92%, 70%);
+        --key-backgound-3: hsl(268, 47%, 21%);
+        --key-shadow-3: hsl(290, 70%, 36%);
+        // text color
+        --color-1: hsl(52, 100%, 62%);
+        --color-2: hsl(198, 20%, 13%);
+        --color-3: hsl(0, 0, 100%);
     }
-}
-
-ul {
-    list-style-type: none;
 }
