--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
-@use './abstracts';
-@use './base';
-@use '../components';
-@use './layout';
+@use './1-abstracts' as *;
+@use './2-tools' as *;
+@use './3-basics' as *;
+@use './4-layout' as *;
+@use './5-modules' as *;
