--- a/src/scss/3-basics/_typography.scss
+++ b/src/scss/3-basics/_typography.scss
@@ -1,2 +1,2 @@
-// Red Hat Text: 700
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap');
+//  Barlow Semi Condensed 500, 600, 700
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600;700&display=swap');
