animation rework add/remove element -> add/remove class

--- a/src/scss/1-abstracts/_variables.scss
+++ b/src/scss/1-abstracts/_variables.scss
@@ -2,6 +2,7 @@
 // Primary
 $grayish-blue: hsl(237, 18%, 59%);
 $soft-red: hsl(345, 95%, 68%);
+$darker-soft-red: hsl(345, 100%, 65%);
 // Neutral
 $white: hsl(0, 0%, 100%);
 $dark-desaturated-blue: hsl(236, 21%, 26%);
