--- a/src/scss/1-abstracts/_variables.scss
+++ b/src/scss/1-abstracts/_variables.scss
@@ -27,7 +27,7 @@ $ff-primary: 'Barlow Semi Condensed', sans-serif;
 
 // Font size
 $fs-primary: 1.25rem;
-$fs-score-heading: clamp(1.25rem, 3vw, 1.25rem);
+$fs-score-heading: 1.5rem;
 $fs-stats: clamp(1.125rem, 3vw, 1.25rem);
 
 // Logo
@@ -40,10 +40,23 @@ $radius-heading: clamp(0.25rem, 1.75vw, 0.75rem);
 $padding-vertical-heading: clamp(0.625rem, 2.5vw, 1.125rem);
 $padding-horizontal-heading: clamp(0.75rem, 4vw, 2rem);
 $padding-vertical-score-container: 0.75rem;
-$padding-horizontal-score-container: clamp(0.625rem, 4.5vw, 2rem);
+// $padding-horizontal-score-container: clamp(0.625rem, 4.5vw, 2rem);
+$padding-horizontal-score-container: clamp(0.625rem, 4.5vw, 1rem);
 
-// Pick option
-$pick-diagonal: clamp(6rem, 25vw, 8.5rem);
-$pick-border: clamp(0.625rem, 2.5vw, 0.75rem);
+// Pick token
+$pick-diagonal: clamp(4rem, 18vw, 7rem);
+$picker-token-border: clamp(0.625rem, 2vw, 0.75rem);
 $pick-inner-shadow-height: clamp(0.25rem, 1vw, 0.5rem);
 $pick-outer-shadow-height: clamp(0.25rem, 1.125vw, 0.375rem);
+// Choice token
+// $choice-flex-gap: clamp(2.5rem, 7vw, 4rem);
+$choice-flex-gap: clamp(0rem, 7vw, 10rem);
+$choice-heading-fs: clamp(0.75rem, 3vw, 1.5rem);
+$choice-token-width: clamp(5rem, 25vw, 15rem);
+$choice-token-border-width: clamp(1rem, 4vw, 2rem);
+$choice-token-bottom-shadow-width: clamp(0.375rem, 2vw, 0.75rem);
+$choice-token-top-shadow-width: clamp(0.375rem, 2vw, 0.75rem);
+$winner-shadow-width: 2rem;
+
+// Result
+$result-fs: clamp(2rem, 4vw, 3.5rem);
